# horton

./: .buildinfo  .gitignore  README  dft_sto3g_frac.pstats  genindex.html  index.html  intro_citing_horton.html  intro_contact_information.html  intro_horton_overview.html  intro_license_information.html  objects.inv  py-modindex.html  search.html  searchindex.js  tech_api.html  tech_dev.html  tech_dev_checklist.html  tech_dev_citing_papers.html  tech_dev_cython.html  tech_dev_documentation.html  tech_dev_examples.html  tech_dev_git.html  tech_dev_unit_tests.html  tech_ref.html  tech_ref_acronyms.html  tech_ref_contributors.html  tech_ref_dictionary.html  tech_ref_file_formats.html  tech_ref_functionals.html  tech_ref_gaussian_basis.html  tech_ref_grids.html  tech_ref_literature.html  tech_ref_release_history.html  tech_ref_release_planning.html  user_download_and_install.html  user_download_and_install_linux.html  user_download_and_install_mac.html  user_download_and_install_setup_cfg.html  user_download_and_install_troubleshooting.html  user_estruct.html  (+17 more)
_sources/: index.txt  intro_citing_horton.txt  intro_contact_information.txt  intro_horton_overview.txt  intro_license_information.txt  tech_api.txt  tech_dev.txt  tech_dev_checklist.txt  tech_dev_citing_papers.txt  tech_dev_cython.txt  tech_dev_documentation.txt  tech_dev_examples.txt  tech_dev_git.txt  tech_dev_unit_tests.txt  tech_ref.txt  tech_ref_acronyms.txt  tech_ref_contributors.txt  tech_ref_dictionary.txt  tech_ref_file_formats.txt  tech_ref_functionals.txt  tech_ref_gaussian_basis.txt  tech_ref_grids.txt  tech_ref_literature.txt  tech_ref_release_history.txt  tech_ref_release_planning.txt  user_download_and_install.txt  user_download_and_install_linux.txt  user_download_and_install_mac.txt  user_download_and_install_setup_cfg.txt  user_download_and_install_troubleshooting.txt  user_estruct.txt  user_estruct_ap1rog.txt  user_estruct_hf_dft.txt  user_estruct_perturbation.txt  user_getting_started.txt  user_hamiltonian.txt  user_hamiltonian_io.txt  user_hamiltonian_model.txt  user_hamiltonian_molecular.txt  user_other.txt  (+8 more)
_sources/lib/: mod_horton_cache.txt  mod_horton_cell_h.txt  mod_horton_cext.txt  mod_horton_constants.txt  mod_horton_context.txt  mod_horton_correlatedwfn_geminal.txt  mod_horton_correlatedwfn_perturbation.txt  mod_horton_correlatedwfn_restricted_ap1rog.txt  mod_horton_correlatedwfn_stepsearch.txt  mod_horton_correlatedwfn_trustregionopt.txt  mod_horton_espfit_cext.txt  mod_horton_espfit_cost.txt  mod_horton_espfit_electrostatics_h.txt  mod_horton_espfit_mask_h.txt  mod_horton_exceptions.txt  mod_horton_gbasis_boys_h.txt  mod_horton_gbasis_calc_h.txt  mod_horton_gbasis_cartpure_h.txt  mod_horton_gbasis_cext.txt  mod_horton_gbasis_cholesky_h.txt  mod_horton_gbasis_common_h.txt  mod_horton_gbasis_fns_h.txt  mod_horton_gbasis_gbasis_h.txt  mod_horton_gbasis_gbw_h.txt  mod_horton_gbasis_gobasis.txt  mod_horton_gbasis_ints_h.txt  mod_horton_gbasis_iobas.txt  mod_horton_gbasis_iter_gb_h.txt  mod_horton_gbasis_iter_pow_h.txt  mod_horton_grid_atgrid.txt  mod_horton_grid_base.txt  mod_horton_grid_becke_h.txt  mod_horton_grid_cext.txt  mod_horton_grid_cubic_spline_h.txt  mod_horton_grid_evaluate_h.txt  mod_horton_grid_int1d.txt  mod_horton_grid_lebedev_laikov_h.txt  mod_horton_grid_molgrid.txt  mod_horton_grid_ode2.txt  mod_horton_grid_ode2_h.txt  (+88 more)
cmake/: UseCython.cmake
data/basis/: 6-31g**.nwchem  6-31g**.nwchem~  6-31g*.nwchem  6-31g.nwchem  cc-pvdz.nwchem  cc-pvtz.nwchem  def2-qzvppd.nwchem  projection_hack.nwchem  sto3gTo321g.nwchem  sto3gTo631++g**.nwchem  sto3gTo631++g**.nwchem~  sto3gTo631g**.nwchem  sto3gTo631g**.nwchem~
data/test/: H.xyz  H2_4.xyz  H2_e.xyz  (+1 more)
horton/: MatrixHelpers.py  __init__.py  __init__.py.orig  constraint.py  constraint.py.orig  dVee.py  initialGuess.py  lagrangian.py  matrix.py  mpmath_utils.py  newton.py  newton_rewrite.py  old_lagrangian.py  system.py
horton/gbasis/cgbasis/: CMakeLists.txt
horton/grid/cgrid/: CMakeLists.txt
lib/: mod_horton_cache.html  mod_horton_cell_h.html  mod_horton_cext.html  mod_horton_constants.html  mod_horton_context.html  mod_horton_correlatedwfn_geminal.html  mod_horton_correlatedwfn_perturbation.html  mod_horton_correlatedwfn_restricted_ap1rog.html  mod_horton_correlatedwfn_stepsearch.html  mod_horton_correlatedwfn_trustregionopt.html  mod_horton_espfit_cext.html  mod_horton_espfit_cost.html  mod_horton_espfit_electrostatics_h.html  mod_horton_espfit_mask_h.html  mod_horton_exceptions.html  mod_horton_gbasis_boys_h.html  mod_horton_gbasis_calc_h.html  mod_horton_gbasis_cartpure_h.html  mod_horton_gbasis_cext.html  mod_horton_gbasis_cholesky_h.html  mod_horton_gbasis_common_h.html  mod_horton_gbasis_fns_h.html  mod_horton_gbasis_gbasis_h.html  mod_horton_gbasis_gbw_h.html  mod_horton_gbasis_gobasis.html  mod_horton_gbasis_ints_h.html  mod_horton_gbasis_iobas.html  mod_horton_gbasis_iter_gb_h.html  mod_horton_gbasis_iter_pow_h.html  mod_horton_grid_atgrid.html  mod_horton_grid_base.html  mod_horton_grid_becke_h.html  mod_horton_grid_cext.html  mod_horton_grid_cubic_spline_h.html  mod_horton_grid_evaluate_h.html  mod_horton_grid_int1d.html  mod_horton_grid_lebedev_laikov_h.html  mod_horton_grid_molgrid.html  mod_horton_grid_ode2.html  mod_horton_grid_ode2_h.html  (+88 more)
tools/: boys.py  harmonics.py  moments.py
(+82 files in other folders)
